finishing the comment logic

--- a/frontend/src/app/post-card/post-card.html
+++ b/frontend/src/app/post-card/post-card.html
@@ -24,6 +24,8 @@
         <div *ngIf="isCommenting">
             <textarea name="comment" placeholder="comment..."></textarea>
             <div class="post-comments" *ngFor="let comment of comment?.comments">
+                {{ comment?.userName }}
+                {{ comment?.timesTamp }}
                 {{ comment?.comment }}
             </div>
         </div>
