handling comment basic issue

--- a/frontend/src/app/post-card/post-card.html
+++ b/frontend/src/app/post-card/post-card.html
@@ -22,10 +22,15 @@
         <button class="likes" (click)="onReact(post.postUuid)">❤️ {{ post.likeCount }}</button>
         <button class="comments" (click)="onComment(post.postUuid)">💬 {{ post.commentCount }}</button>
         <div *ngIf="isCommenting">
-            <textarea name="comment" placeholder="comment..."></textarea>
+            <textarea name="comment" id="cleanForm" placeholder="comment..." #commentData></textarea>
+            <!-- <button (click)="">Clear</button> -->
+            <button type="submit" (click)="onSubmitComment(commentData.value, comment?.postUuid); commentData.value = ''">comment</button>
+            <div class="myComment" *ngIf="instantComment">{{ instantComment }}</div>
             <div class="post-comments" *ngFor="let comment of comment?.comments">
                 {{ comment?.userName }}
+                <br>
                 {{ comment?.timesTamp }}
+                <br>
                 {{ comment?.comment }}
             </div>
         </div>
