--- a/frontend/src/app/home/components/searchbar/searchbar.html
+++ b/frontend/src/app/home/components/searchbar/searchbar.html
@@ -1,3 +1,6 @@
 <div class="search-bar">
-    <input type="text" placeholder="search by username...">
+    <input [formControl]="searchControl" placeholder="search by username..." required>
+    <div class="users" *ngFor="let user of searchData">
+        <ul (click)="goToProfile(user.uuid)">{{ user.username }}</ul>
+    </div>
 </div>
