exceptionHandling() in HttpSecurity has been deprecated and marked for removal + handling follow/unfollow loginc + som security

--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -2,4 +2,6 @@
     <h1>{{ profileRes.firstName }}</h1>
     <br>
     <h2>{{ profileRes.lastName }}</h2>
+    <button *ngIf="profileRes.connect" (click)="followLogic(profileRes.userName, profileRes.connect)">UnFollow</button>
+    <button *ngIf="!profileRes.connect" (click)="followLogic(profileRes.userName, profileRes.connect)">Follow</button>
 </div>
