still handling notification logic in front also starting of handling reading notif in back and front

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="/notifications" class="nav-link">
+            <a href="/notification" class="nav-link">
                 <span class="nav-icon">🔔</span>
                 <span class="nav-text">Notifications</span>
             </a>
